[gd_scene load_steps=2 format=3 uid="uid://de6w8gqjpmfb3"]

[ext_resource type="Script" path="res://Scripts/upgrade_menu.gd" id="1_3g1ri"]

[node name="Upgrade Menu" type="Node2D"]
script = ExtResource("1_3g1ri")

[node name="PlayButton" type="Button" parent="."]
offset_left = 194.0
offset_top = 66.0
offset_right = 238.0
offset_bottom = 110.0
text = "Play"

[node name="MovementSpeedButton" type="Button" parent="."]
offset_left = 147.0
offset_right = 239.0
offset_bottom = 31.0
text = "Movement"

[node name="MiningSpeedButton" type="Button" parent="."]
offset_left = 127.0
offset_top = 31.0
offset_right = 240.0
offset_bottom = 62.0
text = "Mining Speed"

[node name="StoneRarityButton" type="Button" parent="."]
offset_top = 17.0
offset_right = 103.0
offset_bottom = 48.0
text = "Stone Rarity"

[node name="DirtRarityButton" type="Button" parent="."]
offset_top = 49.0
offset_right = 88.0
offset_bottom = 80.0
text = "Dirt Rarity"

[node name="MiningPowerButton" type="Button" parent="."]
offset_top = 81.0
offset_right = 115.0
offset_bottom = 112.0
text = "Mining power"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MovementSpeedButton" to="." method="_on_movement_speed_button_pressed"]
[connection signal="pressed" from="MiningSpeedButton" to="." method="_on_mining_speed_button_pressed"]
[connection signal="pressed" from="StoneRarityButton" to="." method="_on_stone_rarity_button_pressed"]
[connection signal="pressed" from="DirtRarityButton" to="." method="_on_dirt_rarity_button_pressed"]
[connection signal="pressed" from="MiningPowerButton" to="." method="_on_mining_power_button_pressed"]
